--- a/Report/bibliography.bib
+++ b/Report/bibliography.bib
@@ -6,8 +6,6 @@
 
 %% Saved with string encoding Unicode (UTF-8) 
 
-
-
 @book{CancerGenetics,
 	Author = {Boris Pasche},
 	Date-Added = {2019-05-26 15:23:56 +0000},
@@ -52,3 +50,11 @@
 	Volume = {80},
 	Year = {1993},
 	Bdsk-Url-1 = {http://www.jstor.org/stable/2337177}}
+	
+@Manual{R-stdca,
+  title = {stdca: Decision Curve Analysis for Survival Data},
+  author = {Daniel D Sjoberg},
+  year = {2019},
+  url = {https://rdrr.io/github/ddsjoberg/dca/man/stdca.html#heading-4},
+}
+
