--- a/Report/07-final-model.Rmd
+++ b/Report/07-final-model.Rmd
@@ -123,7 +123,7 @@ basal <- readRDS("../basal-model.rds")
 fit <- survfit(basal)
 lines(x = fit$time, y = fit$surv, type='s', lwd=2, col=4, lty = 3)
 
-legend("topright", c("baseline", "genic", "genic-2", "clinic"), col = 1:4, lty=c(2, 1, 1, 1))
+legend("topright", c("baseline", "genic", "genic-2", "clinic"), col = 1:4, lty=c(2, 1, 1, 3))
 ```
 
 \newpage
@@ -232,9 +232,7 @@ lines(c((1 - p) * 100, (1 - p) * 100), c(0, 1), lwd = 4)
 lines(c((1 - p) * 100, 100), c(1, 1), lwd = 4)
 ```
 
-Rispetto al modello perfetto, che arriva fino al 68.1% (complementare della probabilità 31.9%), la nostra predictivness curve ci mostra come il modello sovrastimi eccessivamente il rischio di morte del paziente.
-
-\newpage
+Rispetto al modello perfetto, che arriva fino al 68.1% (complementare della probabilità 31.9%), la nostra predictiveness curve ci mostra come il modello sovrastimi eccessivamente il rischio di morte del paziente.
 
 ### Brier score
 
@@ -250,11 +248,20 @@ print(paste("Brier score under strong calibration: ", brier_score_sc))
 ```
 Il valore del Brier score è più vicino allo zero che all'uno e ciò indica che il modello è ben calibrato.
 
+\newpage
+
 ### Discriminazione
 
 Valutiamo l'accuratezza della predizione del rischio e Scegliamo poi la soglia migliore da utilizzare usando l'indice di Youden:
 
-```{r echo=FALSE, warning=FALSE}
+```{r eval = FALSE}
+roc_model <- roc(dataset$event.12m, dataset$riskdeath)
+
+Youden <- roc_model$sensitivities + roc_model$specificities - 1
+optimal.cut.off <- roc_model$thresholds[Youden == max(Youden)]
+```
+
+```{r echo=FALSE, message=FALSE, warning=FALSE}
 library("pROC")
 
 roc_model <- roc(dataset$event.12m, dataset$riskdeath)
