--- a/Report/index.Rmd
+++ b/Report/index.Rmd
@@ -12,6 +12,7 @@ author:
 date: "`r Sys.Date()`"
 site: bookdown::bookdown_site
 documentclass: book
+classoption: openany
 bibliography: bibliography.bib
 biblio-style: apalike
 link-citations: yes
